src/libs/3rdparty/cplusplus/Symbol.cpp
@@ -105,7 +105,7 @@ Symbol::Symbol(TranslationUnit *translationUnit, unsigned sourceLocation, const 
 
 Symbol::Symbol(Clone *clone, Subst *subst, Symbol *original)
     : _name(clone->name(original->_name, subst)),
-      _scope(original->_scope),
+      _scope(0),
       _next(0),
       _fileId(clone->control()->stringLiteral(original->fileName(), original->fileNameLength())),
       _sourceLocation(original->_sourceLocation),
@@ -294,6 +294,11 @@ Block *Symbol::enclosingBlock() const
             return block;
     }
     return 0;
+}
+
+Scope *Symbol::scope() const
+{
+    return _scope;
 }
 
 unsigned Symbol::index() const
